--- a/views/pages/examples/eg009.ejs
+++ b/views/pages/examples/eg009.ejs
@@ -36,13 +36,13 @@
                value="<%= locals.dsConfig.signerName %>" required>
       </div>
       <div class="form-group">
-        <label for="signerEmail">CC Email</label>
+        <label for="ccEmail">CC Email</label>
         <input type="email" class="form-control" id="ccEmail" name="ccEmail"
                aria-describedby="emailHelp" placeholder="pat@example.com" required
         <small id="emailHelp" class="form-text text-muted">The email and/or name for the cc recipient must be different from the signer.</small>
       </div>
       <div class="form-group">
-        <label for="signerName">CC Name</label>
+        <label for="ccName">CC Name</label>
         <input type="text" class="form-control" id="ccName" placeholder="Pat Johnson" name="ccName"
                required>
       </div>
