--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -109,6 +109,17 @@
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
   </p>  
 
+  <h4 id="example013">13. <a href="eg013">Embedded Signing Ceremony from a template with an added document</a></h4>
+  <p>This example sends an envelope based on a template.</p>
+  <p>In addition to the template's document(s), the example adds an
+     additional document to the envelope by using the 
+     <a target='_blank' href='https://developers.docusign.com/esign-rest-api/guides/features/templates#composite-templates'>Composite Templates</a>
+     feature.</p>
+  <p>API methods used: 
+     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
+     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+  </p>
+
 </div>
 
 <!-- anchor-js is only for the index page -->
