--- a/views/pages/examples/eg002.ejs
+++ b/views/pages/examples/eg002.ejs
@@ -5,7 +5,8 @@
   (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
   is used to position the signing fields in the documents.
 </p>
-<p>This is a general example of creating and sending an envelope (a signing request) to multiple recipiens, with multiple documents, and with signature fields for the documents.</p>
+<p>This is a general example of creating and sending an envelope (a signing request) to multiple recipients,
+  with multiple documents, and with signature fields for the documents.</p>
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
