--- a/views/pages/examples/eg008.ejs
+++ b/views/pages/examples/eg008.ejs
@@ -6,14 +6,16 @@
 </p>
 
 <p>Templates are usually created using the DocuSign web tool. This example creates
-  a template that can later be used by example #9. This example first lists 
-  the user's templates and only creates a new one if necessary.
+  a template that will later be used by other examples in this launcher. </p>
+  
+<p>This example first lists the user's templates and only creates a new template if one does not already exist in your account.
 </p>
 
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
-<p>API method used:
-   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
+<p>API methods used:
+    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/list">Templates::list</a>,
+    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
 </p>
 
 <p>
