--- a/views/pages/examples/eg004.ejs
+++ b/views/pages/examples/eg004.ejs
@@ -1,7 +1,7 @@
 <% include ../../partials/head %>
 
 <h4>4. Get an envelope's basic information and status</h4>
-<p>List the core information about an envelope, including its overall status.
+<p>List the basic information about an envelope, including its overall status.
   Additional API/SDK methods may be used to get additional information about the 
   envelope, its documents, recipients, etc.</p>
 
