Only show valid documentation links

--- a/views/pages/examples/eg004.ejs
+++ b/views/pages/examples/eg004.ejs
@@ -11,7 +11,9 @@
   status of an envelope changes.
 </p>
 
-<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% if (showDoc) { %>
+  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% } %>
 
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/get">Envelopes::get</a>.
