--- a/views/pages/examples/eg002.ejs
+++ b/views/pages/examples/eg002.ejs
@@ -7,8 +7,12 @@
 </p>
 <p>This is a general example of creating and sending an envelope (a signing request) to multiple recipients,
   with multiple documents, and with signature fields for the documents.</p>
-<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<p>API method used: 
+
+  <% if (showDoc) { %>
+    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+  <% } %>
+  
+  <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 
