--- a/views/pages/examples/eg010.ejs
+++ b/views/pages/examples/eg010.ejs
@@ -9,7 +9,9 @@
 <p>Since binary transfer is not yet supported by the SDK, this example uses the API directly and 
 demonstrates how to do so.</p>
 
-<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% if (showDoc) { %>
+  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% } %>
 
 <p>API method used: 
   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
