--- a/views/pages/examples/eg011.ejs
+++ b/views/pages/examples/eg011.ejs
@@ -7,12 +7,17 @@
       (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
       is used to position the signing fields in the documents.</p>
 <p>DocuSign recommends that you enhance your application as needed to avoid the need 
-    for the sender view. For example, if the sender view is used to optionally
+    for the embedded sender view.
+</p>
+<p>For example, if the sender view is used to optionally
     add additional documents to the envelope, enhance your app to provide the 
-    needed feature.
+    needed feature (see example 13 for adding additional documents programmatically).
 </p>
 
-<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% if (showDoc) { %>
+  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% } %>
+
 <p>API methods used:
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
