--- a/views/pages/examples/eg012.ejs
+++ b/views/pages/examples/eg012.ejs
@@ -10,7 +10,10 @@
     Or you can open the NDSE in a new tab for the user.
 </p>
 
-<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% if (showDoc) { %>
+    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% } %>
+  
 <p>API method used: 
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
 </p>
