--- a/views/pages/examples/eg013.ejs
+++ b/views/pages/examples/eg013.ejs
@@ -16,7 +16,10 @@
     signing ceremony is initiated from your website.</p>
 <% } %>
 
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% if (showDoc) { %>
+  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+<% } %>
+
 <p>API methods used: 
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
