CC email should be different than signer email

--- a/views/pages/examples/eg011.ejs
+++ b/views/pages/examples/eg011.ejs
@@ -51,7 +51,7 @@
       <label for="ccEmail">CC Email</label>
       <input type="email" class="form-control" id="ccEmail" name="ccEmail"
              aria-describedby="emailHelp" placeholder="pat@example.com" required
-      <small id="emailHelp" class="form-text text-muted">The email and/or name for the cc recipient must be different from the signer.</small>
+      <small id="emailHelp" class="form-text text-muted">The email for the cc recipient must be different from the signer's email.</small>
     </div>
     <div class="form-group">
       <label for="ccName">CC Name</label>
