eg-014: order form with payment

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -125,6 +125,16 @@
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
   </p>
 
+  <h4 id="example014">14. <a href="eg014">Send an envelope with a remote (email) signer and cc recipient</a></h4>
+  <p>The envelope includes a order form with a payment field. Anchor text 
+    (<a target ='_blank' href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+    is used to position the signing fields in the documents.
+  </p>
+  <p>API method used: 
+     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+
+  
 </div>
 
 <!-- anchor-js is only for the index page -->
