order form spacing

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -125,10 +125,10 @@
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
   </p>
 
-  <h4 id="example014">14. <a href="eg014">Send an envelope with a remote (email) signer and cc recipient</a></h4>
-  <p>The envelope includes a order form with a payment field. Anchor text 
+  <h4 id="example014">14. <a href="eg014">Send an envelope with an order form and payment field</a></h4>
+  <p>Anchor text 
     (<a target ='_blank' href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
-    is used to position the signing fields in the documents.
+    is used to position the fields in the documents.
   </p>
   <p>API method used: 
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
