--- a/views/pages/examples/eg014.ejs
+++ b/views/pages/examples/eg014.ejs
@@ -1,6 +1,13 @@
 <% include ../../partials/head %>
 
 <h4>14. Send an envelope with an order form, including a payment field.</h4>
+
+<h5 style="color: purple;">Note: This example will only work if the sender's DocuSign account
+  is set up with a DocuSign payment gateway. Since the Payment Gateway ID 
+  is set in the configuration file, you will need to run your 
+  own instance of this project to set it.
+</h5>
+
 <p>Anchor strings 
   (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
   are used to position the fields in the documents.
