DEVDOCS-552 Update file names in views

--- a/views/pages/examples/eg004EnvelopeInfo.ejs
+++ b/views/pages/examples/eg004EnvelopeInfo.ejs
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg004.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (envelopeOk) { %>
