--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -25,7 +25,7 @@
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg013.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (templateOk) { %>
