--- a/views/pages/examples/eg001EmbeddedSigning.ejs
+++ b/views/pages/examples/eg001EmbeddedSigning.ejs
@@ -13,7 +13,7 @@
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg001.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
