--- a/views/pages/examples/eg002SigningViaEmail.ejs
+++ b/views/pages/examples/eg002SigningViaEmail.ejs
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg002.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
