--- a/views/pages/examples/eg003ListEnvelopes.ejs
+++ b/views/pages/examples/eg003ListEnvelopes.ejs
@@ -12,7 +12,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
 </p>
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg003.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
