--- a/views/pages/examples/eg005EnvelopeRecipients.ejs
+++ b/views/pages/examples/eg005EnvelopeRecipients.ejs
@@ -11,7 +11,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
 </p>
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg005.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (envelopeOk) { %>
