--- a/views/pages/examples/eg006EnvelopeDocs.ejs
+++ b/views/pages/examples/eg006EnvelopeDocs.ejs
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg006.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (envelopeOk) { %>
