--- a/views/pages/examples/eg007EnvelopeGetDoc.ejs
+++ b/views/pages/examples/eg007EnvelopeGetDoc.ejs
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg007.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (! envelopeOk) { %>
