--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg008.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
   
   <form class="eg" action="" method="post" data-busy="form">
