--- a/views/pages/examples/eg009UseTemplate.ejs
+++ b/views/pages/examples/eg009UseTemplate.ejs
@@ -18,7 +18,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg009.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (templateOk) { %>
