--- a/views/pages/examples/eg010SendBinaryDocs.ejs
+++ b/views/pages/examples/eg010SendBinaryDocs.ejs
@@ -18,7 +18,7 @@ demonstrates how to do so.</p>
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg010.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
