--- a/views/pages/examples/eg012EmbeddedConsole.ejs
+++ b/views/pages/examples/eg012EmbeddedConsole.ejs
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg012.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (!envelopeOk) { %>
