--- a/views/pages/examples/eg014CollectPayment.ejs
+++ b/views/pages/examples/eg014CollectPayment.ejs
@@ -22,7 +22,7 @@
 </p>
 
 <p>
-    View source file <a target="_blank" href="<%= source %>">eg014.js</a> on GitHub.
+    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
 </p>
 
 <% if (gatewayOk) { %>
