--- a/public/assets/css.css
+++ b/public/assets/css.css
@@ -17,7 +17,7 @@ body {
 }
 
 .jumbotron {
-  background: #3677cfb5;
+  background: #888888;
   padding: 3em;
   color: white;
   margin: 1em auto 1.5em; }
