--- a/views/pages/examples/eg003ListEnvelopes.ejs
+++ b/views/pages/examples/eg003ListEnvelopes.ejs
@@ -1,7 +1,7 @@
 <% include ../../partials/head %>
 
-<h4>3. List envelopes in the user's account</h4>
-<p>List the envelopes created in the last 30 days.</p>
+<h4>3. List updated envelopes in the user's account</h4>
+<p>List the envelopes whose status has changed in the last 30 days.</p>
 <p>This example demonstrates how to query DocuSign about envelopes sent by the current user.</p>
 
 <% if (showDoc) { %>
