Added eg templates

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -129,7 +129,6 @@
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
   </p>
 
-  <h2>Payments Example</h2>
   <h4 id="example014">14. <a href="eg014">Send an envelope with an order form and payment field</a></h4>
   <p>Anchor text 
     (<a target ='_blank' href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
@@ -138,6 +137,31 @@
   <p>API method used: 
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
+
+  <h4 id="example015">15. <a href="eg015">Get the tab data from an envelope</a></h4>
+  <p>This example retrieves the tab (field) values from an envelope.</p>
+  <p>API method used:
+      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeFormData/get">EnvelopeFormData::get</a>.
+  </p>
+
+  <h4 id="example016">16. <a href="eg016">Set tab values for a envelope</a></h4>
+  <p>This example sets the tab (field) values for an envelope including tabs that can and cannot be changed by the signer.</p>
+  <p>API method used:
+      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+
+  <h4 id="example017">17. <a href="eg017'">Set template tab values</a></h4>
+  <p>This example sets the tab (field) values for a template being used by an envelope.</p>
+  <p>API method used:
+      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+
+  <h4 id="example018">18. <a href="eg018">List envelope custom metadata field values</a></h4>
+  <p>This example lists the envelope's custom metadata field values.</p>
+  <p>API method used:
+      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeCustomFields/list">EnvelopeCustomFields::list</a>.
+  </p>
+
 
   
 </div>
