--- a/views/pages/examples/eg016SetTabValues.ejs
+++ b/views/pages/examples/eg016SetTabValues.ejs
@@ -21,15 +21,15 @@
       <label for="signer_email">Signer Email</label>
       <input type="email" class="form-control" id="signer_email" name="signer_email"
              aria-describedby="emailHelp" placeholder="pat@example.com" required
-             value="{{ signer_email }}">
+             value="<%= signer_email %>">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
       <label for="signer_name">Signer Name</label>
       <input type="text" class="form-control" id="signer_name" placeholder="Pat Johnson" name="signer_name"
-             value="{{ signer_name }}" required>
+             value="<%= signer_name %>" required>
     </div>
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   
