--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -22,13 +22,13 @@ radio button and checkbox tabs.</p>
           <label for="signer_email">Signer Email</label>
           <input type="email" class="form-control" id="signer_email" name="signer_email"
                  aria-describedby="emailHelp" placeholder="pat@example.com" required
-                 value="{{ signer_email }}">
+                 value="<%= signer_email %>">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="signer_name">Signer Name</label>
           <input type="text" class="form-control" id="signer_name" placeholder="Pat Johnson" name="signer_name"
-                 value="{{ signer_name }}" required>
+                 value="<%= signer_name %>" required>
         </div>
         <div class="form-group">
             <label for="cc_email">CC Email</label>
@@ -41,16 +41,15 @@ radio button and checkbox tabs.</p>
             <input type="text" class="form-control" id="cc_name" placeholder="Pat Johnson" name="cc_name"
                    required>
         </div>
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <input type="hidden" name="_csrf" value="<%- csrfToken %>">
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
     <% } else { %>
-        <p>Problem: please first create the template by using <a href="{{ app_url ~ 'index.php?page=' }}eg008">example 8.</a> <br/>
+        <p>Problem: please first create the template by using <a href="eg008">example 8.</a> <br/>
         Thank you.</p>
 
-    <form class="eg" action="{{ app_url ~ 'index.php' }}" method="get">
-        <input type="hidden" name="page" value="eg008"/>
+    <form class="eg" action="eg008" method="get">
         <button type="submit" class="btn btn-primary">Continue</button>
     </form>
     <% } %>
