--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -19,26 +19,26 @@ radio button and checkbox tabs.</p>
 <% if (templateOk) { %>
     <form class="eg" action="" method="post" data-busy="form">
         <div class="form-group">
-          <label for="signer_email">Signer Email</label>
-          <input type="email" class="form-control" id="signer_email" name="signer_email"
+          <label for="signerEmail">Signer Email</label>
+          <input type="email" class="form-control" id="signerEmail" name="signerEmail"
                  aria-describedby="emailHelp" placeholder="pat@example.com" required
-                 value="<%= signer_email %>">
+                 value="<%= signerEmail %>">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
-          <label for="signer_name">Signer Name</label>
-          <input type="text" class="form-control" id="signer_name" placeholder="Pat Johnson" name="signer_name"
-                 value="<%= signer_name %>" required>
+          <label for="signerName">Signer Name</label>
+          <input type="text" class="form-control" id="signerName" placeholder="Pat Johnson" name="signerName"
+                 value="<%= signerName %>" required>
         </div>
         <div class="form-group">
-            <label for="cc_email">CC Email</label>
-            <input type="email" class="form-control" id="cc_email" name="cc_email"
+            <label for="ccEmail">CC Email</label>
+            <input type="email" class="form-control" id="ccEmail" name="ccEmail"
                    aria-describedby="emailHelp" placeholder="pat@example.com" required
             <small id="emailHelp" class="form-text text-muted">The email for the cc recipient must be different from the signer's email.</small>
         </div>
         <div class="form-group">
-            <label for="cc_name">CC Name</label>
-            <input type="text" class="form-control" id="cc_name" placeholder="Pat Johnson" name="cc_name"
+            <label for="ccName">CC Name</label>
+            <input type="text" class="form-control" id="ccName" placeholder="Pat Johnson" name="ccName"
                    required>
         </div>
         <input type="hidden" name="_csrf" value="<%- csrfToken %>">
