--- a/views/pages/examples/eg016SetTabValues.ejs
+++ b/views/pages/examples/eg016SetTabValues.ejs
@@ -18,16 +18,16 @@
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
-      <label for="signer_email">Signer Email</label>
-      <input type="email" class="form-control" id="signer_email" name="signer_email"
+      <label for="signerEmail">Signer Email</label>
+      <input type="email" class="form-control" id="signerEmail" name="signerEmail"
              aria-describedby="emailHelp" placeholder="pat@example.com" required
-             value="<%= signer_email %>">
+             value="<%= locals.dsConfig.signerEmail %>">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
-      <label for="signer_name">Signer Name</label>
-      <input type="text" class="form-control" id="signer_name" placeholder="Pat Johnson" name="signer_name"
-             value="<%= signer_name %>" required>
+      <label for="signerName">Signer Name</label>
+      <input type="text" class="form-control" id="signerName" placeholder="Pat Johnson" name="signerName"
+        value="<%= locals.dsConfig.signerName %>" required>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-primary">Submit</button>
