--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -150,7 +150,7 @@
       <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
-  <h4 id="example017">17. <a href="eg017'">Set template tab values</a></h4>
+  <h4 id="example017">17. <a href="eg017">Set template tab values</a></h4>
   <p>This example sets the tab (field) values for a template being used by an envelope.</p>
   <p>API method used:
       <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
