--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -22,13 +22,13 @@ radio button and checkbox tabs.</p>
           <label for="signerEmail">Signer Email</label>
           <input type="email" class="form-control" id="signerEmail" name="signerEmail"
                  aria-describedby="emailHelp" placeholder="pat@example.com" required
-                 value="<%= signerEmail %>">
+                 value="<%= locals.dsConfig.signerEmail %>">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="signerName">Signer Name</label>
           <input type="text" class="form-control" id="signerName" placeholder="Pat Johnson" name="signerName"
-                 value="<%= signerName %>" required>
+                 value="<%= locals.dsConfig.signerName %>" required>
         </div>
         <div class="form-group">
             <label for="ccEmail">CC Email</label>
