--- a/views/pages/examples/eg007EnvelopeGetDoc.ejs
+++ b/views/pages/examples/eg007EnvelopeGetDoc.ejs
@@ -20,10 +20,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
 </p>
 
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-
+<% include ../../partials/sourceChooser %>
 <% if (! envelopeOk) { %>
   <p>Problem: please first create an envelope using <a href="eg002">example 2.</a> <br/>
     You will then need to use example 6 to create the list of documents.<br/>
