--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -20,10 +20,7 @@
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
 </p>
 
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-  
+<% include ../../partials/sourceChooser %>  
   <form class="eg" action="" method="post" data-busy="form">
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
       <button type="submit" class="btn btn-primary">Continue</button>
