--- a/public/assets/css.css
+++ b/public/assets/css.css
@@ -2,6 +2,16 @@ body {
   padding-top: 5rem;
 }
 
+.split {-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;overflow-y: auto;overflow-x: hidden;}
+.gutter {background-color: transparent;background-repeat: no-repeat;background-position: 50%;}
+.gutter.gutter-horizontal {cursor: col-resize;background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg=='); }
+.gutter.gutter-vertical {cursor: row-resize;background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII='); }
+.split.split-horizontal, .gutter.gutter-horizontal { height: 100%;float: left;}
+.colDivider {height: 50rem;}
+.gutter.gutter-horizontal {background-repeat: space}
+.preWrap, .preWrap code {white-space:pre-wrap; overflow-wrap: break-word; word-break: break-word }
+
+
 /* See https://css-tricks.com/hash-tag-links-padding/ */
 #index-page h4 {
   z-index: -100;
