--- a/views/pages/examples/eg004EnvelopeInfo.ejs
+++ b/views/pages/examples/eg004EnvelopeInfo.ejs
@@ -19,10 +19,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/get">Envelopes::get</a>.
 </p>
 
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-
+<% include ../../partials/sourceChooser %>
 <% if (envelopeOk) { %>
   <p>The envelope you created via example 2 will be queried.</p>
   
