--- a/views/pages/examples/eg010SendBinaryDocs.ejs
+++ b/views/pages/examples/eg010SendBinaryDocs.ejs
@@ -17,10 +17,7 @@ demonstrates how to do so.</p>
   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-
+<% include ../../partials/sourceChooser %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
