--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -24,10 +24,7 @@
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-
+<% include ../../partials/sourceChooser %>
 <% if (templateOk) { %>
   <p>The template you created via example 8 will be used.</p>
   
