--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -12,10 +12,7 @@ radio button and checkbox tabs.</p>
 <p>API method used:
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-
+<% include ../../partials/sourceChooser %>
 <% if (templateOk) { %>
     <form class="eg" action="" method="post" data-busy="form">
         <div class="form-group">
