--- a/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
+++ b/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
@@ -18,10 +18,7 @@ envelope's certificate of completion.</p>
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeCustomFields/list">EnvelopeCustomFields::list</a>.
 </p>
 
-<p>
-    View source file <a target="_blank" href="<%= sourceUrl %>"><%= sourceFile %></a> on GitHub.
-</p>
-
+<% include ../../partials/sourceChooser %>
 <% if (envelopeOk) { %>
     <p>The last envelope you created with this example launcher will be queried.
      Recommendation:  use example 16 or 17, then this example, since those examples set a custom data field for the envelope.</p>
